# project-ocr

./: .dockerignore  .env.example  .gitignore  AI_Verification_Request_Contract_v1.json  AI_Verification_Result_Contract_v1.json  AI_Verification_Result_Contract_v1_1.json  Dockerfile  PRD.md  README.md  alembic.ini  db_reset.bat  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
.superpowers/sdd/: final-review-fix-report.md
app/: config.py  main.py
app/application/commands/: process_document_command.py  reprocess_job_command.py
app/application/dto/: ai_result_dto.py  detection_result_dto.py  (+3 more)
app/inference/: easyocr_runtime.py  ocr_runtime.py  yolo_batcher.py  yolo_runtime.py
app/observability/: logging.py  metrics.py  tracing.py
app/orchestration/: result_aggregator.py  transaction_processor.py
app/postprocessing/: coordinate_mapper.py
app/rendering/: pdf_renderer.py
app/shared/: health_registry.py
app/storage/: local_storage.py
app/workers/: worker_main.py
dataset groundtruth/: ground_truth.json
docs/: ARCHITECTURE.md
scripts/: benchmark_pipeline.py  check.py  db_query.py  db_reset.py  direct_processor.py  result_adapter.py  streamlit_processor.py  upload_app.py
tests/: conftest.py
tests/integration/: test_local_e2e.py
tests/unit/: test_benchmark_pipeline.py  test_direct_processor.py  test_document_ocr.py  test_id_generator.py  test_nemotron_parse_adapter.py  test_paddleocr_vl_adapter.py  test_qwen_reasoning_adapter.py  test_qwen_vl_adapter.py  test_upload_app.py  test_validator.py  test_yolo_adapter.py
(+131 files in other folders)
