[project]
name = "vision-ai"
version = "0.1.0"
description = "AI Invoice Verification Agent Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "aio-pika>=9.4",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "structlog>=24.2",
    "httpx>=0.27",
    "PyMuPDF>=1.24",
    "opencv-python-headless>=4.9",
    "ultralytics>=8.2",

    "zxing-cpp>=2.2",
    "pyzbar>=0.1",
    "paddleocr[doc-parser]>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "black>=24.4",
    "pre-commit>=3.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["py311"]
